--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/styled-components": "^5.1.22",
     "baseui": "^10.9.0",
+    "combine-reducers": "^1.0.0",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-modal": "^3.14.4",
@@ -28,6 +30,7 @@
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "toggle-button": "^1.0.1",
+    "usestate": "^1.1.3",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
