--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
       "not dead",
       "not op_mini all"
     ],
-
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -36,7 +35,7 @@
     "react-scripts": "5.0.0",
     "react-toggle": "^4.1.2",
     "redux": "^4.1.2",
-
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3",
     "toggle-button": "^1.0.1",
     "usestate": "^1.1.3",
@@ -54,7 +53,7 @@
   "name": "todolist-app",
   "private": true,
   "scripts": {
-"start": "react-scripts start",
+    "start": "react-scripts start",
     "dev": "node ace server --watch",
     "build": "react-scripts build",
     "test": "react-scripts test",
